fix: corregir visibilidad de textos del formulario y titulos en modo oscuro

--- a/Trabajo-Grupal-Taller-de-mercado-y-tecnologia-web-1/estilos.css/ESTILOS.CSS
+++ b/Trabajo-Grupal-Taller-de-mercado-y-tecnologia-web-1/estilos.css/ESTILOS.CSS
@@ -113,14 +113,3 @@ body.oscuro #btn-modo {
     background-color: #ffc107 !important;
     color: #000000 !important;
 }
-
-
-/* Completa el formulario */
-body.oscuro p{
-    color: #ffffff !important;
-}
-
-/* ¿Cómo comenzó esto? */
-body.oscuro h2{
-    color: deepskyblue !important;
-}
